2010-05-20  Diego Gonzalez  <diegohcg@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] QtTestBrowser does not support websites which requires HTTP Authentication via dialogs
        https://bugs.webkit.org/show_bug.cgi?id=38456

        * QtTestBrowser/webpage.cpp:
        (WebPage::WebPage):
        (WebPage::authenticationRequired):
        * QtTestBrowser/webpage.h:

2010-05-20  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Eric Seidel.

        editingBehavior settings needs to be set back to a reasonable default between tests
        https://bugs.webkit.org/show_bug.cgi?id=39433

        For now, hard code the default setting during reset, so that the serialized
        version of the setting stays in sync with expectations.

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (resetDefaultsToConsistentValues): Reset editing behavior to the appropriate platform default.
        * DumpRenderTree/win/DumpRenderTree.cpp:
        (resetDefaultsToConsistentValues): Ditto.

2010-05-20  Brent Fulgham  <bfulgham@webkit.org>

        Build fix.  No review.

        The WebKitAPITest targets do not use the "_debug" suffix needed
        by the WinCairo port.  Added Debug_Cairo target to correct this.

        * WebKitAPITest/WebKitAPITest.vcproj:

2010-05-20  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Ojan Vafai.

        editing/selection/extend-selection-after-double-click.html crashes on the Leopard Intel release bot
        https://bugs.webkit.org/show_bug.cgi?id=39431

        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        (LayoutTestController::setEditingBehavior):
        Prevent a double-free by not having this variable be in the auto-release pool.

2010-05-20  Martin Robinson  <mrobinson@webkit.org>

        Reviewed by Ojan Vafai.

        Expose the editing behavior setting in DRT to test all editing code paths
        https://bugs.webkit.org/show_bug.cgi?id=38603
